# cdm-task-service-client

./: .gitignore  README.md  RELEASE_NOTES.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
docker_compose/cts_helpers/: add_cts_job_to_mongo.py
docker_compose/s3_policies/: cdm-task-service-read-write-policy.json  minio_create_bucket_entrypoint.sh
src/cdmtaskserviceclient/: client.py
test/: conftest.py  test_client.py
