[project]
name = "cdm-task-service-client"
version = "0.1.0"
description = "Client for the KBase CDM Task Service"
readme = "README.md"
authors = [{ name = "KBase Development Team" }]
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdmtaskserviceclient"]

[dependency-groups]
dev = [
    "awscrt>=0.27.4",
    "boto3>=1.39.3",
    "ipython>=9.4.0",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
